Ofuscando el codigo

--- a/index.html
+++ b/index.html
@@ -70,15 +70,7 @@
             $(".dropdown-button").dropdown();
         })
 
-  var config = {
-    apiKey: "AIzaSyDVVlHl3SEeYXRA_fWzsFivI3y7dtpNKvo",
-    authDomain: "basedatos-93a28.firebaseapp.com",
-    databaseURL: "https://basedatos-93a28.firebaseio.com",
-    projectId: "basedatos-93a28",
-    storageBucket: "basedatos-93a28.appspot.com",
-    messagingSenderId: "372044533598"
-  };
-  firebase.initializeApp(config);
+var _0x5f55=["\x41\x49\x7A\x61\x53\x79\x44\x56\x56\x6C\x48\x6C\x33\x53\x45\x65\x59\x58\x52\x41\x5F\x66\x57\x7A\x73\x46\x69\x76\x49\x33\x79\x37\x64\x74\x70\x4E\x4B\x76\x6F","\x62\x61\x73\x65\x64\x61\x74\x6F\x73\x2D\x39\x33\x61\x32\x38\x2E\x66\x69\x72\x65\x62\x61\x73\x65\x61\x70\x70\x2E\x63\x6F\x6D","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x62\x61\x73\x65\x64\x61\x74\x6F\x73\x2D\x39\x33\x61\x32\x38\x2E\x66\x69\x72\x65\x62\x61\x73\x65\x69\x6F\x2E\x63\x6F\x6D","\x62\x61\x73\x65\x64\x61\x74\x6F\x73\x2D\x39\x33\x61\x32\x38","\x62\x61\x73\x65\x64\x61\x74\x6F\x73\x2D\x39\x33\x61\x32\x38\x2E\x61\x70\x70\x73\x70\x6F\x74\x2E\x63\x6F\x6D","\x33\x37\x32\x30\x34\x34\x35\x33\x33\x35\x39\x38","\x69\x6E\x69\x74\x69\x61\x6C\x69\x7A\x65\x41\x70\x70"];var config={apiKey:_0x5f55[0],authDomain:_0x5f55[1],databaseURL:_0x5f55[2],projectId:_0x5f55[3],storageBucket:_0x5f55[4],messagingSenderId:_0x5f55[5]};firebase[_0x5f55[6]](config)
 
     </script>
 </body>
