--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-      <h3>Aplicación JS con Firebase</h3>
+      <h3>Aplicación JS en tiempo real con Firebase</h3>
       <h3 class="orange-text">Jonathan Moreno</h3>
       <div class="row">
         <!-- para la tabla de datos -->
