--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
       <h3>Aplicación JS en tiempo real con Firebase</h3>
-      <h3 class="orange-text">Jonathan Moreno</h3>
+      <h4 class="orange-text">Dev by: Jonathan Moreno</h4>
       <div class="row">
         <!-- para la tabla de datos -->
         <div class="col s12 m6 l6">
